--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,11 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.9.0'
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
