--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,20 @@ spring:
     host: localhost
     port: 6379
     password: 1234
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+
+  datasource:
+    url: jdbc:h2:mem:test
+    driver-class-name: org.h2.Driver
+
+logging:
+  level:
+    org.hibernate.sql: debug
+    org.hibernate.type: trace
+
