--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
+        #format_sql: true
+        show_sql: true
 
   datasource:
     url: jdbc:h2:mem:test
