--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//model Mapper
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+	//embedded-redis
+	implementation ('it.ozimov:embedded-redis:0.7.2') {exclude group: "org.slf4j", module: "slf4j-simple"}
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
