--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	// logging 추가
+	all {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+	}
 }
 
 repositories {
@@ -34,11 +38,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// log
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+ext {
+	set('log4j2.version', '2.17.1')
 }
 
 tasks.named('test') {
